# flora

./: .bazelrc  .gitignore  MODULE.bazel  Makefile  README.md  WORKSPACE  build_python_protos.sh  experiment_test.sh  flake.nix  pareto_cross_run.sh  run.sh  run_experiment.sh  run_piqe.sh  run_renderers.sh  run_rendering_server.sh
eflect/src/main/native/: BUILD  CPUScaler.c  msr.h
eflect_rapl/src/main/c/: arch_spec.c
eflect_rapl/src/main/native/: CPUScaler.h  arch_spec.h  msr.c
experiments/: BUILD
experiments/main/proto/: BUILD  flora_rendering_problem_service.proto  knob.proto  piqe_service.proto
experiments/main/python/: flora_rendering_problem_service_pb2.py  flora_rendering_problem_service_pb2.pyi  flora_rendering_problem_service_pb2_grpc.py  knob_pb2.py  knob_pb2.pyi  knob_pb2_grpc.py  piqe_client.py  piqe_server.py  piqe_service_pb2.py  piqe_service_pb2.pyi  piqe_service_pb2_grpc.py  renderer.py
experiments/main/resources/configuration/: ears_reference.json  ears_test_reference.json  experiment_configuration.json  test_configurations.json  test_configurations_2.json
experiments/main/resources/configurations/: aliens_shiny.json  gumbo_and_teapot.json
experiments/main/resources/knob/: default_knobs.json  reduced_experiment_knobs.json  test_knobs.json
experiments/main/resources/pareto_fronts/: aliens_shiny.json  gumbo_and_teapot.json
src/main/java/flora/: BUILD  Knob.java  KnobContext.java  Machine.java  Meter.java  MeteringMachine.java  PerformanceFault.java  Strategy.java  WorkFactory.java  WorkUnit.java  WorkloadContext.java
test-data/: aliens_shiny_replay_results.json  aliens_shiny_replay_state.json  aliens_shiny_results.json  aliens_shiny_results2.json  aliens_shiny_snapshot.json  aliens_shiny_snapshot2.json  aliens_shiny_state.json  gumbo_and_teapot_results.json  gumbo_and_teapot_state.json
(+269 files in other folders)
