bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "rules_java", version = "8.9.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "grpc", version = "1.71.0")
bazel_dep(name = "grpc-java", version = "1.69.0")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")
http_jar(
    name = "ears",
    sha256 = "340cffece3021fbc167046cbdb1b7d16ee14742135359a006375fffc68762b59",
    urls = [
        # "https://test.lpm.feri.um.si/ears.jar",
        "https://test.lpm.feri.um.si/ears3.jar",
    ],
)
